# oops-lingo

./: .gitignore  Cargo.toml  LICENSE  build.rs  package-lock.json  package.json  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: CI.yml  sync-dependencies.yml
.zed/: settings.json
src/: main.rs
src/lingo/: mod.rs  result.rs  state.rs  ui.rs  worker.rs
src/ui/: card.rs  icons.rs  input.rs  mod.rs
