[package]
name = "oops-lingo"
version = "0.1.0"
authors = ["nerjs <nerjs.stap@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop", "asset"] }


# Debug
dioxus-logger = "0.6.2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
