[package]
name = "oops-lingo"
version = "0.1.0"
authors = ["nerjs <nerjs.stap@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
dioxus = { version = "0.6.3", features = ["desktop", "asset"] }
dioxus-logger = "0.5.1"
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["full", "time"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
